--- a/Aulas/landingPageBootstrap/css/estilos.css
+++ b/Aulas/landingPageBootstrap/css/estilos.css
@@ -59,6 +59,48 @@ p {
     font-weight: 400;
 }
 
+.carousel-container {
+    max-width: 500px; /* Era 500px */
+    margin: 30px auto; /* Menos margem também, opcional */
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.carousel-inner img {
+    width: 100%;
+    height: 200px; /* Altura fixa menor */
+    object-fit: cover; /* Garante que a imagem preencha sem distorcer */
+}
+
+.map-container {
+    position: relative;
+    width: 100%;
+    max-width: 600px; /* controla a largura */
+    height: 300px; /* controla a altura */
+    margin: 0 auto;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
+.map-container iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+.container form {
+    max-width: 600px; /* Ajuste conforme necessário */
+    width: 100%; /* Garante que o formulário ocupe toda a largura disponível */
+    margin: 0 auto; /* Centraliza o formulário */
+}
+
+.form-control {
+    width: 100%; /* Garante que os campos do formulário ocupem 100% da largura */
+}
+
+
 
 @media (max-width: 768px) {
     #home h1 {
